<resources>
    <string name="app_name">TaskApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Status Task -->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>


    <string name="done">Feitas</string>
    <string name="doing">Fazendo</string>
    <string name="todo">A Fazer</string>

    <!-- Auth Fragment -->
    <string name="hint_password">Digite sua senha</string>
    <string name="create_account">Criar conta</string>
    <string name="password">Senha</string>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="recovery_account">Recuperar conta</string>
    <string name="send">Enviar</string>
    <string name="info_recover">Informe seu e-mail de cadastro para receber \num link para alteração de senha.</string>

    <!-- Status Fragment -->
    <string name="description">Descrição</string>
    <string name="info">Criar nova tela de login do app</string>
    <string name="status">Status</string>
    <string name="save">Salvar</string>
    <string name="new_task">Botão adicionar nova tarefa</string>
    <string name="new_taskbar">Nova tarefa</string>


    <!-- Generic -->
    <string name="text_title_warning">Atençao</string>
    <string name="text_button_warning">Entendi</string>
    <string name="email_empty">Preencha seu e-mail</string>
    <string name="password_empty">Preencha sua senha</string>
    <string name="error_generic">Ocorreu um error, tente novamente mais tarde</string>
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada</string>
    <string name="text_load_list_task">Aguarde, estamos carregando as informações</string>
    <string name="text_delete_sucess_task">Tarefa removida com sucesso</string>
    <string name="text_button_dialog_confirm">Confirmar</string>
    <string name="text_title_dialog_delete">Deseja remover esta tarefa</string>
    <string name="text_message_dialog_delete">Aperte em confirmar para remover a tarefa</string>

    <!-- Recover Fragment -->
    <string name="text_message_recover_account_fragment">Pronto, acabmaos de enviar um link para seu email</string>
    <!-- Register Fragment -->
    <string name="email_empty_register_fragment">Preencha um e-mail valido</string>
    <string name="password_empty_register_fragment">Preencha sua senha</string>

    <!-- Form Fragment -->
    <string name="description_empty_form_fragment">Preencha uma descrição</string>
    <string name="text_save_sucess_form_fragment">Tarefa salva com sucesso</string>
    <string name="text_update_sucess_form_fragment">Tarefa atualizada com sucesso</string>
    <string name="text_toolbar_update">Editando tarefa...</string>

    <!-- Erros Firebase Authentication -->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!-- Home Fragment -->
    <string name="text__title_dialog_confirm_lagout">Deseja sair da sua conta ?</string>
    <string name="text_message_dialog_confirm_lagout">Aperte em confirmar para sair da sua conta</string>

</resources>